# Zava-contract

./: .gitignore  LICENSE  README.md  SECURITY.md  ZK_PROOF_SYSTEM_EVALUATION.md
circuits/zava_12w/: Nargo.toml  Prover.toml
circuits/zava_12w/src/: main.nr
circuits/zava_24w/: Nargo.toml  Prover.toml
circuits/zava_24w/src/: main.nr
circuits/zava_8w/: Nargo.toml  Prover.toml
circuits/zava_8w/src/: main.nr
circuits/zava_partial_withdraw/: Nargo.toml
circuits/zava_partial_withdraw/src/: main.nr
circuits/zava_shielded/: Nargo.toml
circuits/zava_shielded/src/: main.nr
contracts/: Cargo.toml
contracts/groth16/: Cargo.toml
contracts/groth16/src/: lib.rs  test.rs
contracts/honk_verifier/: Cargo.toml
contracts/honk_verifier/src/: lib.rs  test.rs
contracts/savings/: Cargo.toml
contracts/savings/src/: lib.rs  test.rs
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs  test.rs
contracts/zava_credit/: Cargo.toml
contracts/zava_credit/src/: lib.rs  test.rs
contracts/zava_vault/: Cargo.toml
contracts/zava_vault/src/: lib.rs  merkle.rs  test.rs
scripts/: build.sh  deploy.sh
