[workspace]
members = [
    "savings",
    "honk_verifier",
    "verifier",
    "zava_vault",
    "zava_credit",
]
resolver = "2"

[workspace.dependencies]
# Protocol 26 "Yardstick" (mainnet 2026-05-06) shipped native BN254 host
# functions (CAP-74 / CAP-80) and Poseidon2 (CAP-75) — the primitives that
# make on-chain UltraHonk verification actually cheap. Do not downgrade.
soroban-sdk = { version = "26.0.1" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
