[package]
name = "honk_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `alloc` is required by ultrahonk_soroban_verifier for its arkworks-driven
# field/curve arithmetic. Keeps the WASM within Soroban's 128 KiB contract
# limit while permitting dynamic buffers during verification.
soroban-sdk = { workspace = true, features = ["alloc"] }
# Real UltraHonk verifier — Rust port of Aztec's Barretenberg reference,
# tuned for Soroban and able to route BN254 ops through Protocol 26 host
# precompiles. Pinned to an exact rev so the on-chain WASM matches the
# audited commit — do not swap for a floating branch ref.
ultrahonk_soroban_verifier = { git = "https://github.com/yugocabrio/ultrahonk-rust-verifier.git", rev = "661db07200f890b1bd9a7349ed787c70a706dd12", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils", "alloc"] }

[features]
testutils = ["soroban-sdk/testutils"]
