[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
savings = { path = "../savings" }
honk_verifier = { path = "../honk_verifier" }

[features]
testutils = ["soroban-sdk/testutils"]
